// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentTitle should render correctly 1`] = `
<header
  class="md-table-card-header quick-link"
>
  <div
    class="md-card-title"
  >
    <h2
      class="md-card-title--title md-card-title--large md-text"
      id="autocompletes-proptypes"
      tabindex="-1"
    >
      <div
        class="quick-link__container"
      >
        Autocomplete
        <a
          class="quick-link__link quick-link__link--title"
          href="#autocompletes-proptypes"
        >
          <i
            class="md-icon material-icons"
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <div
      class="md-text-field-container md-inline-block md-text-field-container--input md-cell--right"
    >
      <input
        class="md-text-field md-text-field--margin md-text"
        id="autocompletes-proptypes-filter"
        placeholder="Filter props"
        type="text"
        value=""
      />
      <hr
        class="md-divider md-divider--text-field md-divider--expand-from-left"
      />
    </div>
    <a
      class="md-btn md-btn--icon md-pointer--hover md-inline-block"
      href="https://github.com/malursen/react-md/master/tree/src/js/Autocompletes/Autocomplete.js"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon fa fa-github md-text--inherit"
      />
    </a>
  </div>
</header>
`;

exports[`ComponentTitle should render correctly 2`] = `
<header
  class="md-table-card-header quick-link"
>
  <div
    class="md-card-title"
  >
    <h2
      class="md-card-title--title md-card-title--large md-text"
      id="autocompletes-proptypes"
      tabindex="-1"
    >
      <span>
        Autocomplete
      </span>
    </h2>
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-cell--right"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        filter_list
      </i>
    </button>
  </div>
</header>
`;
